Implement Flink risk processing job, add PriceEvent class, and update project dependencies